--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "devDependencies": {
     "@semantic-release/git": "^9.0.0",
-    "@types/inquirer": "^7.3.0",
+    "@types/glob": "^8.0.1",
     "@types/jest": "^26.0.8",
     "@types/node": "^14.0.27",
     "@types/prettier": "^2.0.2",
@@ -37,7 +37,7 @@
     "prettier": "^2.0.5",
     "semantic-release": "^17.2.3",
     "ts-jest": "^26.1.4",
-    "typescript": "3.9.7",
+    "typescript": "4.8.4",
     "vue": "^2.6.11"
   },
   "scripts": {
@@ -51,7 +51,7 @@
     "commander": "^4.0.1",
     "core-js": "^3.6.5",
     "eslint": "^7.6.0",
-    "inquirer": "^7.3.3",
+    "glob": "^8.1.0",
     "prettier-eslint": "^11.0.0",
     "ts-node": "^8.10.2",
     "vue-template-compiler": "^2.6.11"
